--- a/index.html
+++ b/index.html
@@ -113,39 +113,40 @@
          <div class="office">Science 1440</div>
          <img class="pic" src="./assets/images/Peter.jpg"  alt="Peter" />
        </li>
-
      </ul>
    </div>
 
    <div class="tools-container">
-     <h2>Tools Used</h2>
-     <ul id="tools-list">
-       <li class="local version-control" id="git">
-         <a href="https://git-scm.com/"><code>git</code></a>
-        </li>
-       <li class="cloud version-control" id="github">
-         <a href="https://github.com/">GitHub</a>
-        </li>
-       <li class="local version-control" id="gitkraken">
-         <a href="https://www.gitkraken.com/git-client">GitKraken</a>
-        </li>
-       <li class="local ide" id="vscode">
-         <a href="https://code.visualstudio.com/">Visual Studio Code</a>
-        </li>
-       <li class="local testing" id="junit">
-         <a href="https://junit.org/">JUnit</a>
-        </li>
-       <li class="local testing" id="karma">
-         <a href="https://karma-runner.github.io/latest/index.html">Karma</a>
-        </li>
-       <li class="local testing" id="protractor">
-         <a href="https://www.protractortest.org/#/">Protractor</a>
-        </li>
-       <li class="cloud testing" id="github-actions">
-         <a href="https://github.com/features/actions">GitHub Actions</a>
-        </li>
-    </ul>
-   </div>
+     <div class="section" id="tools">
+      <h2>Tools Used</h2>
+      <ul id="tools-list">
+        <li class="local version-control" id="git">
+          <a href="https://git-scm.com/"><code>git</code></a>
+          </li>
+        <li class="cloud version-control" id="github">
+          <a href="https://github.com/">GitHub</a>
+          </li>
+        <li class="local version-control" id="gitkraken">
+          <a href="https://www.gitkraken.com/git-client">GitKraken</a>
+          </li>
+        <li class="local ide" id="vscode">
+          <a href="https://code.visualstudio.com/">Visual Studio Code</a>
+          </li>
+        <li class="local testing" id="junit">
+          <a href="https://junit.org/">JUnit</a>
+          </li>
+        <li class="local testing" id="karma">
+          <a href="https://karma-runner.github.io/latest/index.html">Karma</a>
+          </li>
+        <li class="local testing" id="protractor">
+          <a href="https://www.protractortest.org/#/">Protractor</a>
+          </li>
+        <li class="cloud testing" id="github-actions">
+          <a href="https://github.com/features/actions">GitHub Actions</a>
+          </li>
+      </ul>
+    </div>
+  </div>
 
    <div class="card" id="validation">
      <div class="card-body">
