Add a legend for the list of tools
This makes it easy to understand what category each tool belongs to, by looking at the formatting of its list item.

(We tried some formatting options that didn't use legends, but none of them were workable.)

--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
         <a href="https://github.com/features/actions">GitHub Actions</a>
       </li>
     </ul>
+    <div class="tools-legend">
+      <h3>Legend:</h3>
+      <ul>
+        <li class="cloud">Cloud</li>
+        <li class="ide">Integrated Development Environment</li>
+        <li class="testing">Testing</li>
+        <li class="version-control">Version Control</li>
+      </ul>
+    </div>
   </div>
 </div>
 
