--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Add some Google Fonts. -->
   <!-- Adding fonts like this increases load time, so you don't want to include fonts -->
   <!-- you're not actually using. -->
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond:600%7CPatua+One%7CMarcellus%7CDancing+Script" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Condensed&display=swap" rel="stylesheet">
   <!-- html and javascript code for switching style on the fly comes from:
     https://stackoverflow.com/questions/19844545/replacing-css-file-on-the-fly-and-apply-the-new-style-to-the-page -->
@@ -147,7 +148,7 @@
       </li>
     </ul>
     <div class="tools-legend">
-      <h3>Legend:</h3>
+      <h3>Legend:</h>
       <ul>
         <li class="cloud">Cloud</li>
         <li class="ide">Integrated Development Environment</li>
