Fix broken closing tag
In index.html, one of our <h3> tags was closed with </h> rather than </h3>. This commit fixes that.

The problem was only on the style2 branch, not on master.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </li>
     </ul>
     <div class="tools-legend">
-      <h3>Legend:</h>
+      <h3>Legend:</h3>
       <ul>
         <li class="cloud">Cloud</li>
         <li class="ide">Integrated Development Environment</li>
